// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderItem should render the toggle icon with "on" equals to false 1`] = `
<li
  key="key"
  style={
    Object {
      "background": "none",
      "color": "#333",
      "cursor": "pointer",
      "paddingLeft": "3.5rem",
    }
  }
>
  <div
    style={
      Object {
        "height": "1rem",
        "left": "2.25rem",
        "position": "absolute",
        "width": "1rem",
      }
    }
  >
    <ToggleIcon
      on={false}
    />
  </div>
  foo
</li>
`;

exports[`renderItem should render the toggle icon with "on" equals to true 1`] = `
<li
  key="key"
  style={
    Object {
      "background": "none",
      "color": "#333",
      "cursor": "pointer",
      "paddingLeft": "3.5rem",
    }
  }
>
  <div
    style={
      Object {
        "height": "1rem",
        "left": "2.25rem",
        "position": "absolute",
        "width": "1rem",
      }
    }
  >
    <ToggleIcon
      on={true}
    />
  </div>
  foo
</li>
`;

exports[`renderItem should render without the toggle icon 1`] = `
<li
  key="key"
  style={
    Object {
      "background": "none",
      "color": "#333",
      "cursor": "pointer",
      "paddingLeft": "2.25rem",
    }
  }
>
  foo
</li>
`;
